hphp/test/quick/not-enough-args.php.expectf
one
HipHop Warning: two() expects exactly 2 parameters, 1 given in %s/test/quick/not-enough-args.php on line 4
two
HipHop Warning: three() expects exactly 3 parameters, 1 given in %s/test/quick/not-enough-args.php on line 5
three
one
HipHop Fatal error: Uncaught exception 'Exception' with message '2, two() expects exactly 2 parameters, 1 given' in %s/test/quick/not-enough-args.php:8
Stack trace:
#0 %s/test/quick/not-enough-args.php(4): error_handler()
#1 %s/test/quick/not-enough-args.php(17): two()
#2 %s/test/quick/not-enough-args.php(20): main()
#3 {main}
